--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@color/black"
+    tools:context=".PlayerActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -14,9 +15,12 @@
     <com.sycamore.sycaplayer.media.IjkVideoView
         android:id="@+id/video_view"
         android:background="@color/black"
-        android:layout_width="match_parent"
-        android:layout_height="210dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         app:layout_constraintTop_toTopOf="parent"/>
+
+
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
