--- a/app/src/main/res/layout/activity_choose_play.xml
+++ b/app/src/main/res/layout/activity_choose_play.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -27,6 +26,7 @@
         android:background="@null"
         android:padding="12dp"
         android:text="PLAY"
+        android:textColor="@color/white"
         android:layout_gravity="center_horizontal"/>
 
 
